login, register and reset password

--- a/server/templates/confirmation.hbs
+++ b/server/templates/confirmation.hbs
@@ -271,8 +271,7 @@
                                                             <!--[if mso]><table width="100%"><tr><td><![endif]-->
                                                             <h1 class="v-text-align"
                                                                 style="margin: 0px; color: #ffffff; line-height: 140%; text-align: center; word-wrap: break-word; font-family: book antiqua,palatino; font-size: 35px; font-weight: 400;">
-                                                                <span><span>Welcome! {{firstName}} To Proyecto
-                                                                        Uno</span></span></h1>
+                                                                <span><span>Bienvenido/a {{firstName}} a Expense Tracker</span></span></h1>
                                                             <!--[if mso]></td></tr></table><![endif]-->
 
                                                         </td>
@@ -291,7 +290,7 @@
                                                             <!--[if mso]><table width="100%"><tr><td><![endif]-->
                                                             <h3 class="v-text-align"
                                                                 style="margin: 0px; color: #ffffff; line-height: 140%; text-align: center; word-wrap: break-word; font-family: book antiqua,palatino; font-size: 18px; font-weight: 400;">
-                                                                <span>your account {{email}} is ready for use</span>
+                                                                <span>tu cuenta {{email}} está lista para usarse</span>
                                                             </h3>
                                                             <!--[if mso]></td></tr></table><![endif]-->
 
@@ -347,7 +346,7 @@
                                                                         align="center">
 
                                                                         <img align="center" border="0"
-                                                                            src="https://3w908qbl-8000.use2.devtunnels.ms/images/image-7.png"
+                                                                            src="https://827l74fr-8000.brs.devtunnels.ms/images/image-7.png"
                                                                             alt="Image" title="Image"
                                                                             style="outline: none;text-decoration: none;-ms-interpolation-mode: bicubic;clear: both;display: inline-block !important;border: none;height: auto;float: none;width: 39%;max-width: 206.7px;"
                                                                             width="206.7"
@@ -374,7 +373,7 @@
                                                                 style="font-size: 14px; color: #4b4a4a; line-height: 140%; text-align: center; word-wrap: break-word;">
                                                                 <p style="font-size: 14px; line-height: 140%;"><span
                                                                         style="font-size: 12px; line-height: 16.8px;">Este
-                                                                        es un corre de bienvenida</span></p>
+                                                                        es un correo de bienvenida</span></p>
                                                             </div>
 
                                                         </td>
@@ -533,13 +532,6 @@
                                                                         style="padding-right: 0px;padding-left: 0px;"
                                                                         align="right">
 
-                                                                        <img align="right" border="0"
-                                                                            src="https://3w908qbl-8000.use2.devtunnels.ms/images/image-6.png"
-                                                                            alt="Image" title="Image"
-                                                                            style="outline: none;text-decoration: none;-ms-interpolation-mode: bicubic;clear: both;display: inline-block !important;border: none;height: auto;float: none;width: 57%;max-width: 139.65px;"
-                                                                            width="139.65"
-                                                                            class="v-src-width v-src-max-width" />
-
                                                                     </td>
                                                                 </tr>
                                                             </table>
@@ -578,13 +570,6 @@
                                                                     <td class="v-text-align"
                                                                         style="padding-right: 0px;padding-left: 0px;"
                                                                         align="left">
-
-                                                                        <img align="left" border="0"
-                                                                            src="https://3w908qbl-8000.use2.devtunnels.ms/images/image-5.png"
-                                                                            alt="Image" title="Image"
-                                                                            style="outline: none;text-decoration: none;-ms-interpolation-mode: bicubic;clear: both;display: inline-block !important;border: none;height: auto;float: none;width: 57%;max-width: 133.95px;"
-                                                                            width="133.95"
-                                                                            class="v-src-width v-src-max-width" />
 
                                                                     </td>
                                                                 </tr>
@@ -705,11 +690,7 @@
                                                                                     <a href="https://facebook.com/"
                                                                                         title="Facebook"
                                                                                         target="_blank">
-                                                                                        <img src="https://3w908qbl-8000.use2.devtunnels.ms/images/image-2.png"
-                                                                                            alt="Facebook"
-                                                                                            title="Facebook" width="32"
-                                                                                            style="outline: none;text-decoration: none;-ms-interpolation-mode: bicubic;clear: both;display: block !important;border: none;height: auto;float: none;max-width: 32px !important">
-                                                                                    </a>
+                                                                                        </a>
                                                                                 </td>
                                                                             </tr>
                                                                         </tbody>
@@ -726,11 +707,7 @@
                                                                                     style="word-break: break-word;border-collapse: collapse !important;vertical-align: top">
                                                                                     <a href="https://twitter.com/"
                                                                                         title="Twitter" target="_blank">
-                                                                                        <img src="https://3w908qbl-8000.use2.devtunnels.ms/images/image-1.png"
-                                                                                            alt="Twitter"
-                                                                                            title="Twitter" width="32"
-                                                                                            style="outline: none;text-decoration: none;-ms-interpolation-mode: bicubic;clear: both;display: block !important;border: none;height: auto;float: none;max-width: 32px !important">
-                                                                                    </a>
+                                                                                        </a>
                                                                                 </td>
                                                                             </tr>
                                                                         </tbody>
@@ -748,11 +725,7 @@
                                                                                     <a href="https://linkedin.com/"
                                                                                         title="LinkedIn"
                                                                                         target="_blank">
-                                                                                        <img src="https://3w908qbl-8000.use2.devtunnels.ms/images/image-4.png"
-                                                                                            alt="LinkedIn"
-                                                                                            title="LinkedIn" width="32"
-                                                                                            style="outline: none;text-decoration: none;-ms-interpolation-mode: bicubic;clear: both;display: block !important;border: none;height: auto;float: none;max-width: 32px !important">
-                                                                                    </a>
+                                                                                        </a>
                                                                                 </td>
                                                                             </tr>
                                                                         </tbody>
@@ -770,11 +743,7 @@
                                                                                     <a href="https://instagram.com/"
                                                                                         title="Instagram"
                                                                                         target="_blank">
-                                                                                        <img src="https://3w908qbl-8000.use2.devtunnels.ms/images/image-3.png"
-                                                                                            alt="Instagram"
-                                                                                            title="Instagram" width="32"
-                                                                                            style="outline: none;text-decoration: none;-ms-interpolation-mode: bicubic;clear: both;display: block !important;border: none;height: auto;float: none;max-width: 32px !important">
-                                                                                    </a>
+                                                                                        </a>
                                                                                 </td>
                                                                             </tr>
                                                                         </tbody>
