--- a/server/templates/forgot.hbs
+++ b/server/templates/forgot.hbs
@@ -153,7 +153,7 @@
                                                                 <div
                                                                     style="color:#506bec;font-family:Helvetica Neue, Helvetica, Arial, sans-serif;font-size:38px;line-height:120%;text-align:left;mso-line-height-alt:45.6px;">
                                                                     <p style="margin: 0; word-break: break-word;">
-                                                                        <strong><span>Olvidaste tu
+                                                                        <strong><span>¿Olvidaste tu
                                                                                 contraseña?</span></strong>
                                                                     </p>
                                                                 </div>
@@ -168,7 +168,7 @@
                                                                 <div
                                                                     style="color:#40507a;font-family:Helvetica Neue, Helvetica, Arial, sans-serif;font-size:16px;line-height:120%;text-align:left;mso-line-height-alt:19.2px;">
                                                                     <p style="margin: 0; word-break: break-word;">
-                                                                        <span>Hey {{email}} hemos recibido tu
+                                                                        <span>Hemos recibido tu
                                                                             petición para cambiar tu contraseña</span>
                                                                     </p>
                                                                 </div>
@@ -183,7 +183,7 @@
                                                                 <div
                                                                     style="color:#40507a;font-family:Helvetica Neue, Helvetica, Arial, sans-serif;font-size:16px;line-height:120%;text-align:left;mso-line-height-alt:19.2px;">
                                                                     <p style="margin: 0; word-break: break-word;">
-                                                                        <span>Token de Seguridad : </span>
+                                                                        <span>Token de Seguridad: </span>
                                                                     </p>
                                                                     <h1>{{token}}</h1>
                                                                 </div>
@@ -198,7 +198,7 @@
                                                             <td class="pad">
                                                                 <div
                                                                     style="color:#40507a;font-family:Helvetica Neue, Helvetica, Arial, sans-serif;font-size:14px;line-height:120%;text-align:left;mso-line-height-alt:16.8px;">
-                                                                    <p style="margin: 0;">Ya has cambiado tu contraseña?
+                                                                    <p style="margin: 0;">¿Ya has cambiado tu contraseña?
                                                                         Solo ignora ese Email</p>
                                                                 </div>
                                                             </td>
